logs/nagios-notification-google-calendar.log
Listing '.'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Compiling './bin/notification_google_calendar.py'...
***   File "./bin/notification_google_calendar.py", line 39
    except (ImportError, ), err:
                          ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/apiclient'...
Compiling './lib/python3.5/site-packages/apiclient/discovery.py'...
***   File "./lib/python3.5/site-packages/apiclient/discovery.py", line 203
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/apiclient/http.py'...
***   File "./lib/python3.5/site-packages/apiclient/http.py", line 1239
    except HttpError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gflags'...
Listing './lib/python3.5/site-packages/gflags/third_party'...
Listing './lib/python3.5/site-packages/gflags/third_party/pep257'...
Listing './lib/python3.5/site-packages/google_api_python_client-1.0.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.7.7.egg-info'...
Listing './lib/python3.5/site-packages/nagios_notification_google_calendar-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/oauth2client'...
Compiling './lib/python3.5/site-packages/oauth2client/appengine.py'...
***   File "./lib/python3.5/site-packages/oauth2client/appengine.py", line 161
    except app_identity.Error, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/file.py'...
***   File "./lib/python3.5/site-packages/oauth2client/file.py", line 95
    old_umask = os.umask(0177)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/oauth2client/gce.py'...
***   File "./lib/python3.5/site-packages/oauth2client/gce.py", line 89
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/locked_file.py'...
***   File "./lib/python3.5/site-packages/oauth2client/locked_file.py", line 113
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/multistore_file.py'...
***   File "./lib/python3.5/site-packages/oauth2client/multistore_file.py", line 182
    old_umask = os.umask(0177)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/oauth2client/tools.py'...
***   File "./lib/python3.5/site-packages/oauth2client/tools.py", line 116
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/oauth2client-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gflags-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/nagios-notification-google-calendar'...
Listing './share/python-wheels'...
